Allow toggling the column selector with a keyboard
Using a button tag, it's possible for every user to "click" the element.

--- a/app/views/admin/shared/_columns_selector.html.erb
+++ b/app/views/admin/shared/_columns_selector.html.erb
@@ -1,7 +1,7 @@
-<span class="button columns-selector hollow" id="js-columns-selector" data-cookie="<%= cookie %>" data-default="<%= default.join(",") %>">
+<button type="button" class="button columns-selector hollow" id="js-columns-selector" data-cookie="<%= cookie %>" data-default="<%= default.join(",") %>">
   <span class="icon-banner"> </span>
   <strong><%= t("admin.budget_investments.index.columns") %></strong>
-</span>
+</button>
 
 <div class="hidden columns-selector-wrapper" id="js-columns-selector-wrapper">
   <div class="hidden column-selector-item" id="column_selector_item_template">
